--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.freemarker.expose-request-attributes=true
 
-server.port=8090
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+
+server.port=8089
